--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="C:\Users\Abhishek\Desktop\UI_Projects-main\Project-2\style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- Red Rose Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,7 +50,7 @@
           <button class="button-large">Read Our Menu</button>
           <div class="bottom">
             <div>
-              <img class="fix" src="C:\Users\Abhishek\Desktop\UI_Projects-main\Project-2\assets\scrool.png" alt="bottom-logo" />
+              <img class="fix" src="./assets/scrool.png" alt="bottom-logo" />
             </div>
           </div>
         </div>
