--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     />
     <title>Document</title>
   </head>
-  <body background="C:\Users\Abhishek\Desktop\UI_Projects-main\Project-2\assets\pexels-maxyne-barcel-10402282 1.jpg">
+  <body background="./assets/pexels-maxyne-barcel-10402282 1.jpg">
     <div class="container">
       <section aria-label="navbar">
         <nav class="navbar">
           <div>
-            <img src="C:\Users\Abhishek\Desktop\UI_Projects-main\Project-2\assets\white-logo.png" alt="logo" class="logo" />
+            <img src="./assets/white-logo.png" alt="logo" class="logo" />
           </div>
           <div>
             <ul class="list">
